parfait/components/toolbar.css
/* 
  Parfait - toolbar.css
  https://github.com/reizumii/parfait
*/

/* toolbar items */
toolbar .toolbarbutton-1 {
  border-radius: var(--pf-border-radius-sm);
  --toolbarbutton-icon-fill: var(--pf-icon-color);
  --toolbarbutton-hover-background: var(--pf-toolbar-bgcolor-hover);
  --toolbarbutton-active-background: var(--pf-toolbar-bgcolor-active);
}
toolbar .toolbarbutton-1:not(#PlacesChevron, .toolbarbutton-combined-buttons-dropmarker) {
  min-width: var(--pf-toolbaritem-size);
  min-height: var(--pf-toolbaritem-size);
  max-width: var(--pf-toolbaritem-size);
  max-height: var(--pf-toolbaritem-size);
  padding: 0 !important;
  
  .toolbarbutton-icon {
    transition: var(--pf-ts-25);
    transition-timing-function: var(--pf-fx-bounce) !important;
    background-color: transparent !important;
  }
  & > .toolbarbutton-badge-stack {
    background-color: transparent !important;
    --border-color-card: transparent;
  }
  &:not([disabled]) {
    &[checked],
    &:hover {
      background-color: var(--pf-toolbar-bgcolor-hover);
    }
    &[open],
    &:active {
      background-color: var(--pf-toolbar-bgcolor-active);
    }
    &:hover:active {
      fill: var(--pf-icon-color-active) !important;
    }
    &:not(#back-button, #forward-button, #reload-button):active .toolbarbutton-icon {
      scale: 0.95;
    }
  }
}
#fxa-avatar-label { display: none }
/* set positioning */
#navigator-toolbox {
  z-index: unset !important;
}
#toolbar-menubar,
#nav-bar {
  z-index: 2;
}
/* ti: align toolbar items */
#nav-bar {
  min-height: var(--pf-navbar-height) !important;
  padding-inline-start: var(--pf-separation) !important;
  align-items: center;

  @media -moz-pref("parfait.traffic-lights.enabled") or (-moz-platform: macos) {
    :root:not([macOSNativeFullscreen]) & { padding-inline-start: 0 !important; }
  }
}
#nav-bar-customization-target {
  align-items: center;
  gap: var(--pf-toolbaritem-gap);
}
#PanelUI-button {
  align-items: center;
}
#PanelUI-menu-button {
  margin-inline-end: var(--toolbar-start-end-padding) !important;
}

/* hide sidebar active state */
#sidebar-button[checked]:not(:hover) {
  background-color: transparent !important;
}

/* ti: animations */
@media not -moz-pref("parfait.animations.enabled", false) {
  #back-button:not([disabled]):hover:active .toolbarbutton-icon {
    transform: translateX(-2px);
  }
  #forward-button:not([disabled]):hover:active .toolbarbutton-icon {
    transform: translateX(2px);
  }
  #reload-button:not([disabled]) {
    transition: all var(--pf-ts-15);
    transition-timing-function: var(--pf-fx-bounce);

    &:hover:active .toolbarbutton-icon {
      transform: rotate(90deg);
    }
  }
  #reload-button,
  #stop-button {
    opacity: 1 !important;

    & > .toolbarbutton-icon {
      animation: bounce var(--pf-ts-25);
      background-color: transparent !important;
    }
    .toolbarbutton-animatable-image {
      --anim-steps: 0 !important;
    }
  }
}
@keyframes bounce {
  0% { scale: 0.6; }
  100% { scale: 1; }
}

/* ts: prevent navbar from expanding */
:root:not([customizing]) {
  #vertical-spacer {
    max-width: 0 !important;
    min-width: 0 !important;

    &::before {
      content: "";
      min-width: var(--pf-sidebar-width);
      max-width: var(--pf-sidebar-width);
      min-height: var(--pf-navbar-height);
      position: fixed;
      top: 0;
      left: 0;
      z-index: 1;
    }
  }
  /* keep toolbar items on top of vertical spacer */
  #nav-bar-customization-target > :is(toolbarbutton, toolbaritem) {
    z-index: 2;
  }
  
  /* menu bar */
  #toolbar-menubar:not([inactive]) {
    position: fixed;
    top: var(--pf-separation);
    right: var(--pf-separation);
    z-index: 3;
    min-height: 34px !important;
    border-radius: var(--pf-border-radius-sm);
    background-color: var(--arrowpanel-background) !important;
    border: 1px solid var(--pf-border-color) !important;
    box-shadow: var(--pf-shadow-md);
    padding: 4px !important;

    & .titlebar-buttonbox-container {
      display: none;
    }
  }
  
  /* bookmarks toolbar */
  #PersonalToolbar {
    position: fixed;
    bottom: calc(0px - var(--pf-bookmarks-height));
    right: var(--pf-separation);
    z-index: 3;
    width: calc(100% - var(--pf-bookmarks-margin));
    height: var(--pf-bookmarks-height);
    padding: 4px !important;
    background-color: var(--pf-panel-bgcolor) !important;
    border: 1px solid var(--pf-border-color) !important;
    border-radius: var(--pf-border-radius-md);
    box-shadow: var(--pf-shadow-md);
    overflow: unset !important;
    opacity: 0;
    transition: var(--pf-ts-25) !important;
    transition-delay: var(--pf-ts-25) !important;
    
    &:hover,
    &:has(.bookmark-item[open]) {
      opacity: 1;
      bottom: var(--pf-separation);
    }
    &::before,
    &::after {
      content: "";
      width: 100%;
      height: var(--pf-browser-separation);
      position: absolute;
      left: 0;
    }
    &::before { top: calc(0px - var(--pf-browser-separation)); }
    &::after { bottom: calc(0px - var(--pf-browser-separation)); }
  }
}
toolbarbutton.bookmark-item:not(.subviewbutton) {
  --toolbarbutton-border-radius: var(--pf-border-radius-sm);
}

/* taskbar tabs */
:root[taskbartab] {
  .titlebar-spacer[type="post-tabs"],
  toolbarspring {
    display: none;
  }
  #taskbar-tabs-favicon {
    border-radius: var(--pf-favicon-radius);
  }
  .urlbar-background {
    --pf-toolbar-bgcolor: transparent !important;
  }
}

